decomposition of logic

--- a/README
+++ b/README
@@ -3,3 +3,6 @@
 2. Env файл с настройками среды
 3. Добавить CELERY + REDIS - отправка email, создание кеша, получение сложных выборок
 4. Websockets для опевещения о входе, регистрации и приглашение сразиться
+
+Документация APi
+http://localhost/docs#/
