new task add to readme

--- a/README
+++ b/README
@@ -1,8 +1,11 @@
 Добавить
-1. Докер контейнер
-2. Env файл с настройками среды
+1. Добавить скрипт для alembic
 3. Добавить CELERY + REDIS - отправка email, создание кеша, получение сложных выборок
 4. Websockets для опевещения о входе, регистрации и приглашение сразиться
+
+Добавлено:
+1. Докер контейнер
+2. Env файл с настройками среды
 
 Документация APi
 http://127.0.0.1:8000/docs#/
